--- a/entries/entry1/assets/entry1.css
+++ b/entries/entry1/assets/entry1.css
@@ -1,14 +1,10 @@
-body {
-    background-image: url(IMG_Background.jpeg);
-}
-
 .zoom-in-out-box {
   animation: zoom-in-zoom-out 2s ease infinite;
   text-align: center;
   padding-top: 30px;
   padding-bottom: 10px;
   font-size: 60px;
-  color: rgb(0, 0, 0);
+  color:rgb(255, 205, 118);
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -40,7 +36,7 @@ body {
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #baa6b8;
+  background-color: rgb(247, 242, 235);
 }
 
 .image-container {
@@ -61,7 +57,6 @@ img {
   width: 350px; 
   height: 450px;
   border: 2px solid #ccc;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .large {
@@ -210,7 +205,7 @@ img.c {
   }
   
   p {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 205, 118);
     color: white;
     font-family: "Prompt", sans-serif;
     font-weight: 500;
@@ -241,7 +236,47 @@ img.c {
     }
   }
 
-
+  #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    border: none;
+    outline: none;
+    background-color: rgb(255, 205, 118);
+    color: rgb(247, 242, 235);
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: rgb(255, 205, 118);
+  }
+  
+  img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
 
 
