--- a/entries/entry3/assets/entry3.css
+++ b/entries/entry3/assets/entry3.css
@@ -1,14 +1,14 @@
 .zoom-in-out-box {
-    background: #baa6b8);
-    animation: zoom-in-zoom-out 2s ease infinite;
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 10px;
-    font-size: 60px;
-    color: rgb(63, 52, 62);
-    font-family: "Dela Gothic One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+  background: #baa6b8);
+  animation: zoom-in-zoom-out 2s ease infinite;
+  text-align: center;
+  padding-top: 30px;
+  color: rgb(75, 56, 105);
+  padding-bottom: 10px;
+  font-size: 60px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 @keyframes zoom-in-zoom-out {
@@ -37,7 +37,7 @@ body {
     font-family: "Dela Gothic One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: #baa6b8;
+    background-color: rgb(247, 242, 235);
 }
 
 .image-container {
@@ -54,11 +54,14 @@ body {
     gap: 20px; 
 }
 
+.row:hover {
+  filter: saturate(3);
+}
+
 img {
     width: 350px; 
     height: 450px;
     border: 2px solid #ccc;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
 
 .large {
@@ -75,7 +78,7 @@ img {
     height: 60px;
     width: 100%;
     overflow: hidden;
-    background: rgb(63, 52, 62);
+    background: rgb(75, 56, 105);
     font-family: "Prompt", sans-serif;
     font-weight: 500;
     font-style: italic;
@@ -103,6 +106,7 @@ img {
     padding-top: 20px;
     padding-bottom: 20px;
     color: white;
+    background-color: rgb(75, 56, 105);
     font-size: 40px;
 }
 
@@ -226,6 +230,29 @@ img.c {
     font-weight: 900;
     font-style: italic;
   }  
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border: none;
+  outline: none;
+  background-color: rgb(75, 56, 105);
+  color: rgb(247, 242, 235);
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+  
+#myBtn:hover {
+  background-color: rgb(75, 56, 105);
+}
 
 @keyframes marquee {
     0% {
