--- a/entries/entry3/assets/entry3.css
+++ b/entries/entry3/assets/entry3.css
@@ -1,10 +1,8 @@
 .zoom-in-out-box {
-  background: #baa6b8);
   animation: zoom-in-zoom-out 2s ease infinite;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 20px;
   color: rgb(75, 56, 105);
-  padding-bottom: 10px;
   font-size: 60px;
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
@@ -27,17 +25,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Dela Gothic One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    background-color: rgb(247, 242, 235);
 }
 
 .image-container {
@@ -83,9 +70,9 @@ img {
     font-weight: 500;
     font-style: italic;
     color: rgb(255, 255, 255);
-    font-size: 26px;
+    font-size: 33px;
     white-space: nowrap;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 50px;
   }
 
@@ -106,6 +93,8 @@ img {
     padding-top: 20px;
     padding-bottom: 20px;
     color: white;
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
     background-color: rgb(75, 56, 105);
     font-size: 40px;
 }
@@ -254,6 +243,39 @@ img.c {
   background-color: rgb(75, 56, 105);
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color:rgb(75, 56, 105);
+}
+
 @keyframes marquee {
     0% {
       left: 0;
@@ -261,3 +283,4 @@ img.c {
     100% {
       left: -100%;
     }
+
