--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -192,3 +192,36 @@ ul {
   .active {
     background-color:rgb(255, 205, 118);
   }
+
+ /* button{
+    margin-top:20%;
+  }
+  
+  character{
+  z-index: -1000;   
+  }
+  
+  .shirt{
+      visibility:hidden;
+    z-index: 2;
+  }
+  
+  .pant{
+      visibility:hidden;
+    z-index: 1;
+      }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
