--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -44,7 +44,7 @@ video::-webkit-media-controls {
     text-align: center;
     line-height: 1;
     font-size: 60px;
-    color: rgb(255, 223, 16);
+    color: black;
     font-family: "Dela Gothic One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -57,7 +57,7 @@ video::-webkit-media-controls {
     text-align: center;
     line-height: 1;
     font-size: 60px;
-    color: rgb(255, 223, 16);
+    color: black;
     font-family: 'Apple Garamond';
     font-weight: 400;
     font-style: italic;
@@ -298,6 +298,50 @@ ul {
     opacity: 0;
   }
  
+
+
+  .purple-section {
+    background-color: rgb(224, 113, 133); 
+    padding: 20px 0; 
+    overflow: hidden;
+}
+
+.purple-bttom {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.purple-content {
+    flex: 1;
+    padding: 20px;
+}
+
+.purple-paragraph h2 {
+    margin-top: 10px;
+    color: rgb(252, 220, 226);
+    font-size: 18px;
+}
+
+.purple-paragraph p {
+    margin-top: 5px;
+    line-height: 1.6;
+    color: rgb(252, 220, 226);
+}
+
+.mid-content{
+  width: 1365px;
+  margin: auto;
+}
+
+p{
+  font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+}
+
+body,h1,h2,h3,h4,h5,h6,span,b,a,small,div{
+  font-family: "Dela Gothic One", sans-serif;
+}
   
   
   
