--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -339,7 +339,7 @@ p{
   font-style: italic;
 }
 
-body,h1,h2,h3,h4,h5,h6,span,b,a,small,div{
+body,h2,h3,h4,h5,h6,span,b,a,small,div{
   font-family: "Dela Gothic One", sans-serif;
 }
   
