--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -71,7 +71,7 @@ video::-webkit-media-controls {
     font-family: "Dela Gothic One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 50px;
+    font-size: 40px;
     padding-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
@@ -316,7 +316,10 @@ ul {
     margin-top: 10px;
     color: rgb(252, 220, 226);
     font-size: 40px;
+    flex: 1;
+    padding: 20px;
 }
+
 
 .purple-paragraph p {
     margin-top: 5px;
@@ -338,12 +341,7 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
   font-family: "Dela Gothic One", sans-serif;
 }
 
-.green-content h1 {
-  font-size: 63px;
-  color: rgb(75, 56, 105);
-  font-weight: 700;
-  margin-bottom: 4px;
-}
+
   
   
   
