--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -343,6 +343,10 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
 
 /* styles.css */
 
+body{
+  background-color:rgb(234, 192, 199);
+}
+
 .drag-container {
   display: flex;
   justify-content: space-around;
