--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -345,6 +345,7 @@ body,h2,h3,h4,h5,h6,span,b,a,small,div{
 
 body{
   background-color:rgb(234, 192, 199);
+  text-align: center;
 }
 
 .drag-container {
