--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -418,11 +418,11 @@ body{
 
 .game-title {
   color: rgb(234, 192, 199); /* Pink text */
-  background-color: rgb(224, 113, 133); /* Optional: Light peach background */
+  background-color: rgb(224, 113, 133); 
   padding: 10px 20px;
   border-radius: 8px;
   display: inline-block;
-  font-size: 24px;
+  font-size: 40px;
   font-weight: bold;
   margin-bottom: 20px;
   font-family: "Dela Gothic One", sans-serif;
