--- a/entries/entry10/assets/entry10.css
+++ b/entries/entry10/assets/entry10.css
@@ -409,6 +409,9 @@ body{
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-family: "Dela Gothic One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 16px;
 }
 
