--- a/entries/entry9/assets/entry9.css
+++ b/entries/entry9/assets/entry9.css
@@ -52,7 +52,7 @@ h7{
 
 /* Bottom Benner */
 .header-bottom{
-    background-image: url(CookingBackgroundImage.jpg);
+    background-image: url(Cooking.jpg);
     background-size: cover;
     padding: 112px 0;
     position: relative;
