--- a/entries/entry8/assets/entry8.css
+++ b/entries/entry8/assets/entry8.css
@@ -202,7 +202,7 @@ ul {
   text-align: center;
   margin-bottom: 20px;
   font-family: 'Dela Gothic One', sans-serif;
-  color: rgb(23, 101, 114); /* Pink color */
+  color: rgb(23, 101, 114); 
 }
 
 /* Container for workout boxes */
@@ -214,7 +214,7 @@ ul {
 
 /* Individual workout boxes */
 .workout-box {
-  border: 2px solid rgb(23, 101, 114); /* Pink border */
+  border: 2px solid rgb(23, 101, 114); 
   padding: 15px;
   border-radius: 10px;
   background-color: #f9f9f9; /* Light background */
@@ -642,7 +642,7 @@ tbody td {
   }
   @media (max-width: 576px) {
     .main {
-      background: orchid;
+      background: rgb(23, 101, 114);
     }
     .game {
       margin-left: auto;
