--- a/entries/entry8/assets/entry8.css
+++ b/entries/entry8/assets/entry8.css
@@ -942,8 +942,7 @@ tbody td {
   font-family: "Dela Gothic One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color:rgb(23, 101, 114);
-  color: white; 
+  background-color:rgb(255, 255, 255);
   text-align: center;
   padding: 10px;
   border-radius: 10px;
@@ -954,6 +953,6 @@ tbody td {
 .workout-title {
   font-weight: bold;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: rgb(23, 101, 114);
   font-size: 40px;
 }
