--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -200,7 +200,7 @@ ul {
   }
   
   .clothing-preview {
-    width: 100%; /* Adjust the width as needed */
+    width: 200px; /* Adjust the width as needed */
     height: auto;
     transition: transform 0.3s ease-in-out; /* Optional: adds a hover effect */
   }
