--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -208,6 +208,27 @@ ul {
   .clothing-preview:hover {
     transform: scale(1.05); 
   }
+
+  .outfit-title {
+    background-color: rgb(255, 205, 118); /* Choose a background color */
+    padding: 10px 20px;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 20px; /* Adds space between the title and the images */
+  }
+  
+  .outfit-title h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333; /* Change the text color if needed */
+  }
+  
+  .outfit-items a img {
+    width: 400px%; /* Adjust based on your preferred image size */
+    max-width: 400px; /* Set a max width for the images */
+    margin: 10px;
+    display: inline-block;
+  }
   
 
  /* button{
