--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -218,9 +218,11 @@ ul {
   }
   
   .outfit-title h2 {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 40px;
     color: #333; /* Change the text color if needed */
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
   
   .outfit-items a img {
