--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -122,16 +122,15 @@ a.social:hover{
 }
 
 .image-gallery {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;    
-    gap: 20px;             
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Creates two columns */
+    gap: 20px; /* Space between the images */
     margin: 20px auto;
     max-width: 800px;
 }
-    
+
 .image-gallery img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     border: 5px solid rgb(255, 205, 118);
     border-radius: 5px;
