--- a/entries/entry6/assets/entry6.css
+++ b/entries/entry6/assets/entry6.css
@@ -123,10 +123,10 @@ a.social:hover{
 
 .image-gallery {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Creates two columns */
+    grid-template-columns: repeat(2, 1fr); /* Two equal columns */
     gap: 20px; /* Space between the images */
     margin: 20px auto;
-    max-width: 800px;
+    max-width: 800px; /* Adjusts the maximum width of the gallery */
 }
 
 .image-gallery img {
@@ -134,7 +134,9 @@ a.social:hover{
     height: auto;
     border: 5px solid rgb(255, 205, 118);
     border-radius: 5px;
+    object-fit: cover; /* Ensures images fill the container without distortion */
 }
+
     
 #myBtn {
     display: none;
@@ -216,20 +218,20 @@ ul {
     margin-bottom: 20px; /* Adds space between the title and the images */
   }
   
-  .outfit-title h2 {
+.outfit-title h2 {
     font-size: 40px;
     color: #333; /* Change the text color if needed */
     font-family: "Dela Gothic One", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+}
   
-  .outfit-items a img {
-    width: 400px%; /* Adjust based on your preferred image size */
+.outfit-items a img {
+    width: 400px; /* Adjust based on your preferred image size */
     max-width: 400px; /* Set a max width for the images */
     margin: 10px;
     display: inline-block;
-  }
+}
   
 
  /* button{
