--- a/entries/entry5/assets/entry5.css
+++ b/entries/entry5/assets/entry5.css
@@ -1,42 +1,24 @@
-body {
-    margin: 0;
-    background-color: rgb(234, 192, 199);
-}
-
-ul {
-    list-style-type: none;
+ body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #000000;
-    position: sticky;
-    top: 0;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: "Dela Gothic One", sans-serif;
-}
-
-li a.active {
-    background-color: rgb(224, 113, 133);
-}
-
-.video-container {
+    background-color: rgb(234, 192, 199);
+    }
+      
+ .video-container {
+    width:100%;
+    height:100%;
     position: relative;
+    object-fit:cover
+    margin: 0 auto;
+ }
+    
+.video-container video {
     width: 100%;
+    height: 100;
 }
 
-video {
-    width: 100%;
+video::-webkit-media-controls {
+    display: none !important;
 }
 
 .video-overlay {
@@ -45,59 +27,116 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none; 
 }
-
-.overlay-text {
-    position: absolute;
-    font-size: 60px;
-    color: #000;
-}
-
-.container {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.option {
-    margin-bottom: 20px;
-}
-
-.buttons button {
-    background: #04AA6D;
-    color: white;
-    padding: 10px;
-    margin: 5px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-}
-
-.buttons button:hover {
-    background-color: #028a56;
-}
-
-.result {
-    text-align: center;
-    padding: 20px;
-    margin-top: 30px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-}
-
-.result h3 {
-    margin-bottom: 10px;
-}
-
-.image-gallery img {
+    
+.video-overlay img {
     width: 100%;
+    height: 100%;
+    opacity: 100%;
+}
+    
+.overlay-text{
+    position: absolute;
+    text-align: center;
+    line-height: 1;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+    
+.overlay-text2{
+    position: absolute;
+    top: 57%; 
+    left: 46%; 
+    text-align: center;
+    line-height: 1;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    font-family: 'Apple Garamond';
+    font-weight: 400;
+    font-style: italic;
+}
+
+.text-section2 {
+    background-color:rgb(234, 192, 199); /* Set your desired background color */
+    text-align: center;
+    margin-top: 20px;
+    color:rgb(224, 113, 133);
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 50px;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.text-section3 {
+    background-color:rgb(234, 192, 199); 
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 60px;
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:rgb(224, 113, 133);
+    font-size: 30px;
+    text-align: center;
+}
+
+a {
+    color: rgb(224, 113, 133); 
+    text-decoration: 
+}
+
+a.social:hover{
+    font-family: 'Apple Garamond';
+    font-style: italic;
+    color:rgb(224, 113, 133);
+    font-size: 30px;
+}
+
+  a.social:visited {
+    color: rgb(224, 113, 133);
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.text-section {
+    background-color:rgb(234, 192, 199); 
+    margin-left: 30vh;
+    margin-right: 30vh;
+    text-align: relative;
+    margin-bottom: 80px;
+    margin-top: 20px;
+    color:rgb(224, 113, 133);
+    font-family:Garamond, Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-style: italic;
+}
+
+.image-gallery {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;    
+    gap: 20px;             
+    margin: 20px auto;
+    max-width: 800px;
+}
+    
+.image-gallery img {
+    max-width: 100%;
+    height: auto;
     border: 5px solid rgb(224, 113, 133);
     border-radius: 5px;
 }
-
+    
 #myBtn {
     display: none;
     position: fixed;
@@ -105,13 +144,115 @@ video {
     right: 30px;
     z-index: 99;
     font-size: 18px;
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    border: none;
+    outline: none;
     background-color: rgb(224, 113, 133);
     color: rgb(247, 242, 235);
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
 }
-
+        
 #myBtn:hover {
     background-color: rgb(224, 113, 133);
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #000000;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;top: 0;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: "Dela Gothic One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #45454b;
+  }
+  
+  .active {
+    background-color:rgb(224, 113, 133);
+  }
+
+  .options {
+    display: grid;
+    grid-template-rows: repeat(10, 35px);
+    grid-template-columns: 120px;
+    gap: 10px;
+    margin: 20px 0;
+    justify-content: center;
+}
+
+.options button {
+    background: rgba(214, 217, 227, 0.6);
+    border: 2px solid rgb(224, 113, 133);
+    border-radius: 10px;
+    padding: 10px;
+    font-family: 'Prompt', sans-serif;
+    cursor: pointer;
+    font-size: 1rem;
+    text-transform: capitalize;
+}
+
+.options button:hover {
+    background-color: rgba(224, 113, 133, 0.8);
+    color: #fff;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.coffee_name {
+    font-size: 2rem;
+    margin: 20px 0;
+    color: rgb(224, 113, 133);
+    font-family: 'Dela Gothic One', sans-serif;
+}
+
+.cup {
+    width: 200px;
+    height: 150px;
+    background-color: #666;
+    border-radius: 0 0 100px 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+.filling div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.5s ease;
+}
+
+.plate {
+    width: 230px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    margin-top: -10px;
 }
